# sre

./: README.md
ifc/: CMakeLists.txt  ifc.c  test.txt
ifg/: Buffer.c  Buffer.h  CMakeLists.txt  ImageFragment.c  ImageFragment.h  Pixel.c  Pixel.h  Subpixel.h  funcs.h  ifg.c  parse.c
